# GUEDHS

./: .gitignore  README.md
blockchain-api/: .gitignore  Dockerfile.api  Dockerfile.hardhat  Dockerfile.tests  README.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  sample.env  swagger-output.json  swagger.js  swagger.yaml  webapi.js
federated_network/: .env.example  Caddyfile  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  remove_pysyft.sh
federated_network/data/: COVID-19.csv  README.md  chuc.csv  chudsa.csv  data.csv
federated_network/fusionauth/: fusionauth-kickstart.json
federated_network/governance_ui/: actions.py  app.py  config.py  guehds.py  icons.py  logs.py  sections.py  server.py  styles.css  view.py
federated_network/governance_ui/auth/: login.py
federated_network/governance_ui/db/: delete_all_rules.py  populate_db.py  schema.prisma
federated_network/governance_ui/db/migrations/20240726110035_postgres/: migration.sql
federated_network/governance_ui/db/migrations/20240730135520_rules/: migration.sql
federated_network/governance_ui/db/migrations/20240731105103_/: migration.sql
federated_network/governance_ui/db/old_migrations/20240704095404_init/: migration.sql
federated_network/governance_ui/federated_operations/: access_rules.py  approval_rules.py  audit_logs.py  datasets.py  projects.py  users.py  utils.py
federated_network/governance_ui/modules/access_rules/: __init__.py  server.py  ui.py
federated_network/governance_ui/modules/approval_rules/: __init__.py  server.py  ui.py
federated_network/governance_ui/modules/audit_logs/: __init__.py  server.py  ui.py
federated_network/governance_ui/modules/auth/: __init__.py  server.py  ui.py
federated_network/governance_ui/modules/datasets/: __init__.py  server.py  ui.py
federated_network/governance_ui/modules/projects/: __init__.py  server.py  styles.css  ui.py
federated_network/governance_ui/modules/users/: __init__.py  server.py  ui.py
federated_network/notebooks/: create_data_scientist.ipynb  create_new_project.ipynb  create_new_simple.project.ipynb  inspect_project.ipynb  prepare_data.ipynb  register_dataset.ipynb  test_network.ipynb
federated_network/tests/: test_login.py
federated_network/ui/: app.py  server.py
helm/: Chart.yaml  (+1 more)
(+66 files in other folders)
