[tool.poetry]
name = "governance_ui"
version = "0.1.0"
description = ""
authors = [
    "António Bezerra <antonio.bezerra@promptlyhealth.com>",
    "Nuno Costa <nunorocosta@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
syft = {version = "0.8.6", extras = ["datascience"]}
ipykernel = "^6.29.3"
streamlit = "^1.33.0"
jupyterlab = "^4.2.2"
notebook = "^7.2.1"
greenlet = "^3.0.3"
shiny = "^0.10.2"
pytest = "^8.2.2"
shiny-validate = "^0.1.1"
structlog = "^24.2.0"
ruff = "^0.5.0"
pre-commit = "^3.7.1"
prisma = "^0.13.1"
authlib = "^1.3.1"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["icons.py"]

[tool.ruff.lint]
extend-select = ["E501"]
